--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body {
   width: 100%;
   font-family: 'Poppins', sans-serif;
   color: #222;
+  scroll-behavior: smooth;
 }
 
 .carousel-inner img {
@@ -89,6 +90,10 @@ html, body {
 
 .about-content {
   margin: auto;
+}
+
+.lead {
+  font-size: 17px;
 }
 
 .profile-img {
@@ -197,6 +202,21 @@ textarea.contact-form-text {
   color: #d5d5d5;
 }
 
+.back-to-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 15px;
+  z-index: 99;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+footer {
+  background-color: #3f3f3f;
+  color: #d5d5d5;
+  padding-top: 2rem;
+}
+
 /*---Media Queries --*/
 @media (min-width: 1200px) {
   .social a {
@@ -236,6 +256,10 @@ textarea.contact-form-text {
 @media (max-width: 576px) {
   .display-3, .display-5 {
     font-size: 160%;
+  }
+
+  .display-6 {
+    font-size: 100%;
   }
 
   .social a {
