--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ li {
 }
 
 .card {
-  /*min-width: 450px;*/
+  min-width: 310px;
 }
 
 .card-body {
@@ -283,11 +283,11 @@ footer {
   }
 
   .personal-card {
-    height: 300px !important;
+    height: 280px !important;
   }
 
   .card-text {
-    font-size: 14px;
+    font-size: 15px;
   }
 }
 
